force-app/main/default/objects/vlocity_cmt__GenericEnvelope__c/fields/vlocity_cmt__OrderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order for which this envelope was created</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Generic DocuSign Envelopes</relationshipLabel>
    <relationshipName>GenericDocuSignEnvelopes</relationshipName>
    <type>Lookup</type>
</CustomField>