force-app/main/default/objects/vlocity_cmt__GenericEnvelope__c/fields/vlocity_cmt__SentDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__SentDate__c</fullName>
    <description>Envelope Sent Date</description>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>