force-app/main/default/objects/vlocity_cmt__GenericEnvelope__c/fields/vlocity_cmt__VoidedDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__VoidedDate__c</fullName>
    <description>Date when Envelope was voided</description>
    <label>Voided Date</label>
    <type>DateTime</type>
</CustomField>